Add second part of model checking.

--- a/references.bib
+++ b/references.bib
@@ -7,3 +7,9 @@
   publisher = {MIT Press},
   address = {Cambridge},
 }
+
+@webpage{mcrl2doc,
+	title   = {mCRL2 User Documentation},
+	url     = {http://www.mcrl2.org/web/user_manual/user.html},
+	urldate = {2017-02-22},
+}
