--- a/report.tex
+++ b/report.tex
@@ -255,7 +255,7 @@
 
   Every time a message is sent, it can eventually be received.
 
-  \section{Fixed Point Modalities}
+  \subsection{Fixed Point Modalities}
 
   By extending the Hennessy-Milner logic with fixed points we have:
 
@@ -282,7 +282,7 @@
     \end{minipage}
   \end{tabular}
 
-  To make as more familiar with the concept of fixed points and especially with the difference between the minimal fixed point and the maximal fixed point, we have an example with a simple LTS with exactly one state and a loop with an action $a$ \\
+  To make us more familiar with the concept of fixed points and especially with the difference between the minimal fixed point and the maximal fixed point, we have an example with a simple LTS with exactly one state and a loop with an action $a$ \\
 
   \begin{center}
     \begin{tikzpicture}[font=\sffamily\scriptsize]
@@ -292,8 +292,8 @@
   \end{center}
 
   The first question is if $\mu X. \langle a \rangle X$ and $\nu X. \langle a \rangle X$ hold for the state $s$. \\
-  The states in question are empty set $X = \emptyset$ and set of all states $X = \{s\}$. \\
-  Now if $X = \emptyset$ then $X = \langle a \rangle X$, which can be further reduced to $\mathit{false} = \langle a \rangle \mathit{false}$, which is valid. \\
+  The states in question are the empty set $X = \emptyset$ and the set of all states $X = \{s\}$. \\
+  $X = \emptyset$ is the same as $X = \langle a \rangle X$, which can be further reduced to $\mathit{false} = \langle a \rangle \mathit{false}$, which we can see is valid. \\
   Therefore $\mu X. \langle a \rangle X$ - minimal fixed point is valid for all states in the empty set but not in $s$ and $\nu X. \langle a \rangle X$ - maximal fixed point is valid for all states in the largest set $\{s\}$.
 
   \section{ACP}
