--- a/report.tex
+++ b/report.tex
@@ -282,7 +282,7 @@
     \end{minipage}
   \end{tabular}
 
-  To make us more familiar with the concept of fixed points and especially with the difference between the minimal fixed point and the maximal fixed point, we have an example with a simple LTS with exactly one state and a loop with an action $a$ \\
+  To make us more familiar with the concept of fixed points and especially with the difference between the minimal fixed point and the maximal fixed point, we have an example with a simple LTS with exactly one state and a loop with an action $a$. \\
 
   \begin{center}
     \begin{tikzpicture}[font=\sffamily\scriptsize]
@@ -563,7 +563,7 @@ lps2lts coffee_machine_2.lps coffee_machine_2.lts
 ltscompare --equivalence=bisim coffee_machine_1.lts coffee_machine_2.lts
   \end{lstlisting}
 
-  Again, all available equivalences cann be seen in the tools help page (\texttt{-h} flag) or in the \texttt{mCRL2} documentation \cite{mcrl2doc}.
+  Again, all available equivalences can be seen in the tool's help page (\texttt{-h} flag) or in the \texttt{mCRL2} documentation \cite{mcrl2doc}.
 
   \newpage
 
