--- a/report.tex
+++ b/report.tex
@@ -19,7 +19,9 @@
 \supervisor{Vincent van Oostrom}
 
 \begin{document}
-  \abstract{\input{abstract}}
+  \abstract{
+    This report provides a brief overview of process calculi and showcases the \textit{mCRL2} toolset. In particular we will focus on \textit{ACP} and \textit{$\mu$-Calculus}, since \textit{mCRL2} is based on both of them. At the end we provide a short introduction on how to use some of the tools provided by \textit{mCRL2}.
+  }
   \maketitle
   \newpage
   \tableofcontents
