Reference process calculus and bisimulation wikipedia article.

--- a/references.bib
+++ b/references.bib
@@ -13,3 +13,16 @@
 	url     = {http://www.mcrl2.org/web/user_manual/user.html},
 	urldate = {2017-02-22},
 }
+
+@webpage{process_calculus_wiki,
+	title   = {{Process calculus Wikipedia article}},
+	url     = {https://en.wikipedia.org/wiki/Process_calculus},
+	urldate = {2017-02-22},
+}
+
+@webpage{bisimulation_wiki,
+	title   = {{Bisimulation Wikipedia article}},
+	url     = {https://en.wikipedia.org/wiki/Bisimulation},
+	urldate = {2017-02-22},
+}
+
