--- a/report.tex
+++ b/report.tex
@@ -31,7 +31,7 @@
 
   \subsection{What is a Process Calculus?}
 
-  A process calculus is an approach for formally modelling concurrent systems. Furthermore it is a tool for high-level description of interactions, communication and synchronization between processes. It also provides algebraic laws to allow analyzing and transforming process descriptions and permits formal reasoning about equivalences between processes (e.g. using bisimulation).
+  A process calculus is an approach for formally modelling concurrent systems. Furthermore it is a tool for high-level description of interactions, communication and synchronization between processes. It also provides algebraic laws to allow analyzing and transforming process descriptions and permits formal reasoning about equivalences between processes (e.g. using bisimulation). \cite{process_calculus_wiki}
 
   \subsection{Focus}
 
@@ -79,7 +79,7 @@
 
   \subsection{Bisimulation}
   Bisimulation is a binary relation between LTSs, where LTSs behave the same way in the sense
-  that one LTS simulates the other and vice versa. Bisimulation is not the only form of equivalence. We can further differentiate between
+  that one LTS simulates the other and vice versa. \cite{bisimulation_wiki} Bisimulation is not the only form of equivalence. We can further differentiate between
 
   \begin{itemize}[noitemsep]
     \item Trace equivalence: \\
